@@ -48,6 +48,7 @@ public class Native2Ascii extends MatchingTask {
 
     private Mapper mapper;
     private FacadeTaskHelper facade = null;
+    private Native2AsciiAdapter nestedAdapter = null;
 
     /** No args constructor */
     public Native2Ascii() {
@@ -185,6 +186,18 @@ public class Native2Ascii extends MatchingTask {
     }
 
     /**
+     * Set the adapter explicitly.
+     * @since Ant 1.8.0
+     */
+    public void add(Native2AsciiAdapter adapter) {
+        if (nestedAdapter != null) {
+            throw new BuildException("Can't have more than one native2ascii"
+                                     + " adapter");
+        }
+        nestedAdapter = adapter;
+    }
+
+    /**
      * Execute the task
      *
      * @throws BuildException is there is a problem in the task execution.
@@ -274,6 +287,7 @@ public class Native2Ascii extends MatchingTask {
 
         log("converting " + srcName, Project.MSG_VERBOSE);
         Native2AsciiAdapter ad =
+            nestedAdapter != null ? nestedAdapter :
             Native2AsciiAdapterFactory.getAdapter(facade.getImplementation(),
                                                   this,
                                                   createImplementationClasspath());
