@@ -53,4 +53,15 @@ public class Adapter implements Native2AsciiAdapter {
     </native2ascii>
     <au:assertLogContains text="adapter called"/>
   </target>
+
+  <target name="testImplementationAsNestedElement"
+          depends="-create-native2ascii-adapter">
+    <componentdef classname="org.example.Adapter" name="myjavac">
+      <classpath location="${adapter.dir}"/>
+    </componentdef>
+    <native2ascii src="${input}" dest="${output}" includes="**/*.java">
+      <myjavac/>
+    </native2ascii>
+    <au:assertLogContains text="adapter called"/>
+  </target>
 </project>
